# revops-system

./: .env.example  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
automations/: hubspot_daily_sync.json  weekly_metrics_report.json
db/migrations/: 001_initial_schema.sql  002_company_enrichments.sql
src/api/: main.py
src/api/routes/: ai.py  health.py  metrics.py  sync.py  webhooks.py
src/core/: config.py
src/core/ai/: client.py
src/core/database/: client.py
src/integrations/exa/: 002_company_enrichments.sql.txt  client.py  enrichment.py
src/integrations/hubspot/: client.py  models.py  sync.py
src/integrations/slack/: client.py
src/revenue/: snapshots.py  velocity.py  volume.py  yield_.py
tests/unit/: test_hubspot_models.py  test_revenue_metrics.py
